[package]
name = "dache"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.57"
dashmap = "5.4.0"
log = "0.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1"
strum = "~0.24"
strum_macros = "~0.24"
tokio = { version = "1.24", features = ["sync"] }
tokio-postgres = "0.7.7"
